<resources>
    <string name="app_name">ScanCode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="savesuccess">Data export success </string>
    <string name="savefailed">Export data failure</string>
    <string name="savedata">Save the data</string>
    <string name="saveing">Are derived data, please wait a moment</string>
    <string name="nodata">No save the data </string>
    <string name="menuexport">Export data </string>
    <string name="clean">Clear Data</string>
    <string name="menuhelp">Help</string>
    <string name="number">Number</string>
    <string name="code">Code</string>
    <string name="num">Count</string>
    <string name="App_version">version:</string>
    <string name="instructions">instructions:</string>
    <string name="codeexplain">"  Bar code is to use depth module image unit bearing information of graphic symbol, was born in the mid - 1950 - s. The earliest development of bar code technology mature is one dimensional bar code technology, one dimensional bar code in the "one dimensional" refers to the barcode information only in one direction (article is perpendicular to the direction of the empty), with the empty parallel vertical does not carry information. One dimensional bar code technology is in order to solve the retail link of settlement, research and development of product coding information quickly get problem
With the rapid development of bar code technology, people hope to be able to use barcode logo product description information more a lot more kinds of information, such as meet in logistics, electronics, documents, military areas such as product description information automation collection requirements.
Qr code or two-dimensional bar code is the ability to carry information in two directions of bar code, as a kind of derivative bar code technology, from the technology can be divided into two categories, line type and matrix, qr code to solve the problem of shortage of one dimensional code information storage."</string>
    <string name="codeone">"  One dimensional barcode: is the width of the range of multiple article black and white space, arranged according to certain encoding rules, to express a set of graphical information identifier. Common barcode is by the reflectivity vary widely in the (article) black and white (empty) arranged in parallel pattern, the commonly used system of one dimension code in the code include EAN code, code 39, cross 25 yards, UPC codes, 128 yards, 93 yards, ISBN code, and Codabar (Kurdish bar code), common barcode is by the reflectivity vary widely in the (article) black and white (empty) arranged in parallel pattern, such as EAN13 code" </string>
    <string name="codetwo">"  Two dimensional barcode/QR code: (2 - dimensional bar code) is to use a particular geometric figure according to certain rules in the plane (2 d) on the distribution of black and white alternate with graphics symbol information, to the data of common QR code such as QR codes, pdf417 "</string>
    <string name="contentone">"  (1) the software default to receive the barcode data broadcasting mode,scanning can use left and right sides of the blue button scanning, you can also use the interface on the Scan button to complete the Scan"</string>
    <string name="contenttwo">"  (2) after the completion of the scan can be used to export data capabilities, export the scan information to a file, file path is: "sdcard/ScanCodeLogs" </string>

</resources>
